# scanning-tank

./: .gitignore  README.md  hydrophone.dwf3work  pyproject.toml  read.py  scan.py  test_move.py
frontend/: index.html  package.json  pnpm-lock.yaml
frontend/src/: App.tsx
scanning_tank/: pressure_reader.py  scanner.py  server.py
scripts/: peak_finder.py  scan.py  scan_2d.py  scan_at_point.py
src/: pressure_reader.py  scanner.py
stl/: hydrophone_mount.stl
