[project]
name = "scanning-tank"
version = "0.1.0"
description = "Hydrophone scanning tank"
requires-python = ">=3.8"
dependencies = [
    "pyvisa",
    "pyusb",
    "pyserial",
    "numpy>=1.24.4",
    "matplotlib>=3.7.5",
    "dwfpy>=1.2.0",
    "tqdm>=4.67.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
