[project]
name = "scanning-tank"
version = "0.1.0"
description = "Hydrophone scanning tank webapp"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pyserial",
    "websockets",
    "numpy>=1.24.4",
    "dwfpy>=1.2.0",
]

[project.scripts]
scanning-tank = "scanning_tank.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scanning_tank"]
